# ecal-camera-samples

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-ubuntu.yml  build-windows.yml
camera_receiver_mon_plugin/: CMakeLists.txt
camera_receiver_mon_plugin/src/: metadata.json  plugin.cpp  plugin.h  plugin_widget.cpp  plugin_widget.h  plugin_widget.ui
cmake_utils/: cmake_functions.cmake  mon_functions.cmake
cmake_utils/qt/: qt_msvc_path.cmake  qt_windeployqt.cmake  qt_windeployqt_threadsafe_cmake.bat.in
ecal_camera_snd/: CMakeLists.txt  camera_wrapper.cpp  camera_wrapper.h  camera_wrapper_with_fps_control.cpp  camera_wrapper_with_fps_control.h  main.cpp
ecal_camera_snd_python/: README.md  pyproject.toml  requirements.txt  setup.cfg  webcam-grabber.py
ecal_camera_snd_python/datatypes_collection/: pyproject.toml  setup.cfg
ecal_camera_snd_python/datatypes_collection/ros/: builtins_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/ackermann_msgs/: AckermannDriveStamped_pb2.py  AckermannDrive_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/actionlib_msgs/: GoalID_pb2.py  GoalStatusArray_pb2.py  GoalStatus_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/diagnostic_msgs/: DiagnosticArray_pb2.py  DiagnosticStatus_pb2.py  KeyValue_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/geometry_msgs/: AccelStamped_pb2.py  AccelWithCovarianceStamped_pb2.py  AccelWithCovariance_pb2.py  Accel_pb2.py  InertiaStamped_pb2.py  Inertia_pb2.py  Point32_pb2.py  PointStamped_pb2.py  Point_pb2.py  PolygonStamped_pb2.py  Polygon_pb2.py  PoseArray_pb2.py  PoseStamped_pb2.py  PoseWithCovarianceStamped_pb2.py  PoseWithCovariance_pb2.py  Pose_pb2.py  QuaternionStamped_pb2.py  Quaternion_pb2.py  TransformStamped_pb2.py  Transform_pb2.py  TwistStamped_pb2.py  TwistWithCovarianceStamped_pb2.py  TwistWithCovariance_pb2.py  Twist_pb2.py  Vector3Stamped_pb2.py  Vector3_pb2.py  WrenchStamped_pb2.py  Wrench_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/nav_msgs/: MapMetaData_pb2.py  OccupancyGrid_pb2.py  Odometry_pb2.py  Path_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/rcl_interfaces/: Log_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/rosgraph_msgs/: Clock_pb2.py  Log_pb2.py  TopicStatistics_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/sensor_msgs/: BatteryState_pb2.py  CameraInfo_pb2.py  CompressedImage_pb2.py  FluidPressure_pb2.py  Illuminance_pb2.py  Image_pb2.py  Imu_pb2.py  JointState_pb2.py  JoyFeedbackArray_pb2.py  JoyFeedback_pb2.py  Joy_pb2.py  LaserEcho_pb2.py  LaserScan_pb2.py  MagneticField_pb2.py  MultiDOFJointState_pb2.py  MultiEchoLaserScan_pb2.py  NavSatFix_pb2.py  NavSatStatus_pb2.py  PointCloud2_pb2.py  PointField_pb2.py  Range_pb2.py  RegionOfInterest_pb2.py  RelativeHumidity_pb2.py  Temperature_pb2.py  TimeReference_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/shape_msgs/: MeshTriangle_pb2.py  Mesh_pb2.py  Plane_pb2.py  SolidPrimitive_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/std_msgs/: Bool_pb2.py  ByteMultiArray_pb2.py  Byte_pb2.py  Char_pb2.py  ColorRGBA_pb2.py  Duration_pb2.py  Empty_pb2.py  Float32MultiArray_pb2.py  Float32_pb2.py  Float64MultiArray_pb2.py  Float64_pb2.py  Header_pb2.py  Int16MultiArray_pb2.py  Int16_pb2.py  Int32MultiArray_pb2.py  Int32_pb2.py  Int64MultiArray_pb2.py  Int64_pb2.py  Int8MultiArray_pb2.py  Int8_pb2.py  MultiArrayDimension_pb2.py  MultiArrayLayout_pb2.py  String_pb2.py  Time_pb2.py  UInt16MultiArray_pb2.py  UInt16_pb2.py  UInt32MultiArray_pb2.py  UInt32_pb2.py  UInt64MultiArray_pb2.py  UInt64_pb2.py  UInt8_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/stereo_msgs/: DisparityImage_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/tf2_msgs/: TFMessage_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/trajectory_msgs/: JointTrajectoryPoint_pb2.py  JointTrajectory_pb2.py  MultiDOFJointTrajectoryPoint_pb2.py  MultiDOFJointTrajectory_pb2.py
ecal_camera_snd_python/datatypes_collection/ros/visualization_msgs/: ImageMarker_pb2.py  InteractiveMarkerControl_pb2.py  InteractiveMarker_pb2.py  MarkerArray_pb2.py  Marker_pb2.py  MenuEntry_pb2.py
ecal_camera_snd_python/ecal_camera_send/: webcam_grabber.py  webcam_grabber.spec
